fixed about on iphone6

--- a/style.css
+++ b/style.css
@@ -1338,7 +1338,7 @@ ul li a:hover {
         align-items: center;
     }
     #about img {
-        margin-top: 30px;
+        margin-top: 40px;
         width: 70%;
     }
     #about p {
@@ -1404,6 +1404,15 @@ ul li a:hover {
     }
     .contact-method i {
         font-size: 50px;
+    }
+}
+
+@media (max-width: 375px) and (orientation: portrait) {
+    #about p {
+        line-height: 25px;
+    }
+    #about img {
+        margin-top: 45px;
     }
 }
 
